src/test/deca/syntax/invalid/divis_binaire_termemanquant.deca
//  Description :
//            Division avec un seul terme
//
// Résultat:
//mismatched input ';'
//
{
    int n = 0;
    n / ;
}